[package]
name = "terminate-thread"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/uuhan/terminate-thread"
description = "A simple terminatable thread implemented with pthread"
license = "MIT"

include = [
  "src/**/*",
  "build.rs",
  "cbits/Thread.cpp",
  "cbits/Thread.h",
  "cbits/wrapper.h",
  "cbits/AUTHORS",
  "cbits/ChangeLog",
  "cbits/Makefile.am",
  "cbits/NEWS",
  "cbits/README",
  "cbits/configure.ac",
  "cbits/m4/ax_pthread.m4",
]

[dependencies]

[build-dependencies]
autotools = "0.2"
bindgen = "0.69"
